HA-Fixed POST and PUT request/Controller, Validation, routes, swagger.json
